# tensorrt-operator-extension

./: .clang-format  .gitignore  CMakeLists.txt  README.md
generate_model/: generate_model.py
gtest/include/gtest/: gtest-assertion-result.h
include/: common.h  tensorrt_engine.h  tensorrt_logger.h  tensorrt_util.h
include/cuda/: cuda_tensor.h  cuda_util.h
src/plugin/: custom-leakyReLU-kernel.cu  custom-leakyReLU-plugin.cpp  custom-leakyReLU-plugin.h  custom-leakyReLU-plugin.hpp
src/test/: test.cpp
